k8s/infrastructure/network/cilium/allow-external-secrets-webhook.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-external-secrets-webhook
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
